level 0 and 1 done

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,4 +15,8 @@
     		<a id="begin" href="/start_game">click here!</a>
     	</div>
 	</body>
+	<script>
+		var background_audio = new Audio('static/music/adventure_awaits.mp3');
+		background_audio.play();
+	</script>
 </html>
