--- a/templates/main_game.html
+++ b/templates/main_game.html
@@ -19,7 +19,7 @@
     	</div> 
 
     	<div id="gamewin">
-    		<h1 style="color:white; font-size: 60px;">Congratulations! Donny got his donut.</h1>
+    		<h1 style="color:white; font-size: 60px;">Congratulations! Donny got all his donuts.</h1>
     		<p style="color:white;">Since all good things come in threes, that's all the levels for now</p>
     		<a style="text-align: center; vertical-align: middle; line-height: 60px; font-size: 40px; color:white;" href="/">start over</a>
     	</div>
@@ -170,7 +170,7 @@
 	function Boss() {
 		this.x = 30;
 		this.y = 30;
-		this.velocity = 3;
+		this.velocity = 2.5;
 	}
 
 	Boss.prototype.init = function() {
@@ -350,24 +350,6 @@
 		donut.draw();
 	}
 
-
-
-
-
-	// create donny
-	// var img = new Image();
-	// img.src = 'https://opengameart.org/sites/default/files/player_19.png';
-	// img.style.height = "10%";
-	// img.style.width='10%';
-
-
-	// var donny = new Sprite(img, 300, 200);
-	// donny.draw(20, 20);
-
-
-
-
-	
 
 
 
